Correction problème z-index sticky

--- a/css/vitrine.css
+++ b/css/vitrine.css
@@ -198,7 +198,6 @@ footer img:hover {
     font-family: "Nunito", sans-serif;
     border-width: 0px;
     border-radius: 0px;
-    z-index: 1!important;
 }
 .navbar-custom .navbar-nav>li>a {
     color: rgba(255, 255, 255, 1);
